--- a/1. HTML and CSS/Lesson-11/style.css
+++ b/1. HTML and CSS/Lesson-11/style.css
@@ -1,14 +1,12 @@
-/* SPACING SYSTEM (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 */
-
 * {
   box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  background-color: #ffffff;
   line-height: 1;
 }
 
@@ -16,13 +14,27 @@ h2 {
   color: #333333;
   font-size: 48px;
   font-weight: 900;
-  line-height: 1.5;
 }
 
 h3 {
   color: #bdbdbd;
   font-size: 24px;
   font-weight: 900;
+}
+
+a {
+  &:link,
+  &:visited {
+    color: #000000;
+    font-size: 14px;
+    font-weight: 700;
+    text-decoration: none;
+  }
+
+  &:hover,
+  &:active {
+    color: #324ab2;
+  }
 }
 
 header {
@@ -35,25 +47,19 @@ header {
   & nav {
     display: flex;
     gap: 64px;
+
+    & a {
+      letter-spacing: 2px;
+      text-transform: uppercase;
+
+      &:last-child {
+        display: none;
+      }
+    }
   }
 }
 
-a {
-  &:link,
-  &:visited {
-    text-decoration: none;
-    color: #000000;
-    font-size: 14;
-    font-weight: 700;
-  }
-
-  &:hover,
-  &:active {
-    color: #005fa3;
-  }
-}
-
-.hero {
+.hero-section {
   background-image: url('img/hero.png');
   background-size: cover;
   height: calc(100vh - 118px);
@@ -90,7 +96,7 @@ a {
   }
 
   & .carousel {
-    min-width: 60%;
+    width: 1110px;
     display: flex;
     justify-content: space-between;
     position: absolute;
@@ -124,14 +130,14 @@ a {
     & .carousel-btn {
       font-size: 0;
 
-      button {
+      & button {
         border: none;
         cursor: pointer;
         height: 60px;
         width: 60px;
 
         &.previous {
-          background-color: rgb(255, 255, 255, 0.2);
+          background-color: #ffffff33;
 
           &:hover {
             border: 1px solid #ffffff;
@@ -139,7 +145,7 @@ a {
         }
 
         &.next {
-          background-color: rgb(255, 255, 255, 0.4);
+          background-color: #ffffff66;
 
           &:hover {
             border: 1px solid #ffffff;
@@ -179,7 +185,7 @@ a {
       position: relative;
 
       &::after {
-        background-color: rgba(0, 95, 163, 0.65);
+        background-color: #005fa3a6;
         content: '';
         height: 100%;
         width: 100%;
@@ -209,6 +215,548 @@ a {
       &:hover p {
         display: block;
       }
+    }
+  }
+}
+
+.about-us {
+  width: 1110px;
+  margin: 140px auto;
+  display: flex;
+  gap: 125px;
+
+  & .about-company {
+    & h3 {
+      margin-bottom: 40px;
+    }
+
+    & h2 {
+      margin-bottom: 60px;
+
+      & span {
+        color: #005fa3;
+      }
+    }
+
+    & p {
+      font-size: 18px;
+      font-weight: 300;
+      line-height: 1.5;
+    }
+  }
+
+  & .company-cases {
+    display: grid;
+    grid-template-columns: 255px 255px;
+    gap: 30px;
+
+    & .cases {
+      background-color: #ebebeb;
+      padding: 30px 40px;
+
+      & h3 {
+        color: #000000;
+        font-size: 55px;
+        font-weight: 900;
+        margin-bottom: 30px;
+      }
+
+      & p {
+        font-size: 16px;
+        font-weight: 700;
+        margin-bottom: 46px;
+        line-height: 1.5;
+      }
+
+      & a {
+        color: #005fa3;
+        font-size: 16px;
+        text-decoration: underline;
+      }
+
+      &:hover {
+        background-color: #005fa3;
+
+        * {
+          color: #ffffff;
+        }
+      }
+    }
+  }
+}
+
+.clients-section {
+  background-color: #ebebeb;
+  padding: 100px 0;
+  position: relative;
+
+  & .clients {
+    margin: 0 auto;
+    width: 1110px;
+
+    & h3 {
+      margin-bottom: 40px;
+    }
+
+    & h2 {
+      margin-bottom: 80px;
+    }
+
+    & .clients-list {
+      margin-bottom: 50px;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      justify-content: center;
+      gap: 30px;
+
+      & img {
+        border: 1px dotted #005fa3;
+        width: 100%;
+      }
+    }
+
+    & .carousel {
+      display: flex;
+      justify-content: space-between;
+
+      & .carousel-nav {
+        display: flex;
+        align-items: flex-end;
+        gap: 40px;
+
+        & span {
+          cursor: pointer;
+          height: 10px;
+          width: 10px;
+          display: inline-block;
+          border-radius: 50%;
+          background-color: #bccfdd;
+
+          &:hover {
+            border: 1px solid #005fa3;
+          }
+        }
+
+        & span.active {
+          background-color: #005fa3;
+        }
+      }
+
+      & .carousel-btn {
+        font-size: 0;
+
+        & button {
+          border: none;
+          cursor: pointer;
+          height: 60px;
+          width: 60px;
+
+          &.previous {
+            background-color: #bccfdd;
+
+            &:hover {
+              border: 1px solid #005fa3;
+            }
+          }
+
+          &.next {
+            background-color: #005fa3;
+
+            &:hover {
+              border: 1px solid #005fa3;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.review-section {
+  margin: 145px auto;
+  width: 1110px;
+
+  & h3 {
+    margin-bottom: 40px;
+  }
+
+  & h2 {
+    margin-bottom: 80px;
+  }
+
+  & .testimonial {
+    background-color: #ebebeb;
+    margin-bottom: 50px;
+    padding: 45px 95px;
+
+    & p {
+      font-size: 18px;
+      font-weight: 300;
+      line-height: 1.5;
+      margin-bottom: 58px;
+    }
+
+    & .customer {
+      display: flex;
+      align-items: center;
+      gap: 35px;
+
+      & img {
+        height: 80px;
+        width: 80px;
+      }
+
+      & hgroup {
+        & h4 {
+          font-size: 18px;
+          font-weight: 900;
+          margin-bottom: 10px;
+        }
+
+        & p {
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 1;
+          margin: 0;
+        }
+      }
+    }
+  }
+
+  & .carousel {
+    display: flex;
+    justify-content: space-between;
+
+    & .carousel-nav {
+      display: flex;
+      align-items: flex-end;
+      gap: 40px;
+
+      & span {
+        cursor: pointer;
+        height: 10px;
+        width: 10px;
+        display: inline-block;
+        border-radius: 50%;
+        background-color: #bccfdd;
+
+        &:hover {
+          border: 1px solid #005fa3;
+        }
+      }
+
+      & span.active {
+        background-color: #005fa3;
+      }
+    }
+
+    & .carousel-btn {
+      font-size: 0;
+
+      & button {
+        border: none;
+        cursor: pointer;
+        height: 60px;
+        width: 60px;
+
+        &.previous {
+          background-color: #bccfdd;
+
+          &:hover {
+            border: 1px solid #005fa3;
+          }
+        }
+
+        &.next {
+          background-color: #005fa3;
+
+          &:hover {
+            border: 1px solid #005fa3;
+          }
+        }
+      }
+    }
+  }
+}
+
+.contact-section {
+  background-image: url('img/contact.png');
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+
+  * {
+    color: #ffffff;
+  }
+
+  & .contact {
+    padding: 140px 0;
+    width: 1110px;
+    display: flex;
+
+    & h2 {
+      margin-bottom: 60px;
+    }
+
+    & p {
+      font-size: 18px;
+      font-weight: 300;
+      margin-bottom: 80px;
+    }
+
+    & .contact-with-us {
+      flex: 50%;
+
+      & .contact-methods {
+        display: flex;
+        gap: 34px;
+
+        & .phone,
+        & .email {
+          display: flex;
+          align-items: center;
+          gap: 16px;
+
+          & p {
+            font-size: 21px;
+            font-weight: 300;
+            margin-bottom: 0;
+          }
+        }
+      }
+    }
+
+    & .contact-form {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      column-gap: 30px;
+
+      & .form-label-group {
+        display: flex;
+        flex-direction: column;
+
+        & label {
+          font-size: 16px;
+          font-weight: 400;
+        }
+
+        & input,
+        & textarea {
+          background: transparent;
+          border: none;
+          font-size: 21px;
+          font-weight: 300;
+          outline: none;
+          padding: 15px 0;
+          border-bottom: 1px solid #ffffff;
+
+          &::placeholder {
+            color: #bdbdbd;
+          }
+        }
+
+        & input {
+          margin-bottom: 35px;
+        }
+
+        & textarea {
+          height: 135px;
+          margin-bottom: 50px;
+          resize: none;
+        }
+      }
+
+      & .textarea-group {
+        grid-column: 1 / -1;
+      }
+
+      & button {
+        background-color: #005fa3;
+        border: none;
+        cursor: pointer;
+        font-size: 18px;
+        font-weight: 400;
+        grid-column: 1 / -1;
+        height: 60px;
+        justify-self: end;
+        width: 50%;
+
+        &:hover {
+          background-color: #324ab2;
+        }
+      }
+    }
+  }
+}
+
+footer {
+  padding: 45px;
+  display: flex;
+  justify-content: center;
+
+  & .footer-text {
+    display: flex;
+    justify-content: space-between;
+    width: 1110px;
+
+    & p {
+      font-size: 14px;
+      font-weight: 300;
+    }
+  }
+}
+
+@media (width <= 1280px) {
+  header {
+    gap: 80px;
+  }
+
+  .hero-section {
+    & .carousel {
+      width: calc(100% - 160px);
+    }
+  }
+
+  .our-services {
+    & .cards {
+      grid-template-columns: 1fr 1fr;
+      gap: 60px;
+      width: calc(100% - 160px);
+
+      & h2,
+      h3 {
+        grid-column: 1 / span 2;
+      }
+
+      & img {
+        width: 100%;
+      }
+    }
+  }
+
+  .about-us {
+    flex-direction: column;
+    gap: 40px;
+    width: calc(100% - 160px);
+
+    & .company-cases {
+      grid-template-columns: 1fr 1fr;
+
+      & .cases {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 42px;
+
+        &.cases * {
+          margin: 0;
+          text-align: center;
+        }
+      }
+    }
+  }
+
+  .clients-section {
+    & .clients {
+      width: calc(100% - 160px);
+
+      & .clients-list {
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+  }
+
+  .review-section {
+    width: calc(100% - 160px);
+
+    .testimonial {
+      padding: 45px;
+    }
+  }
+
+  .contact-section {
+    & .contact {
+      flex-direction: column;
+      gap: 120px;
+      padding: 60px 0;
+      width: calc(100% - 160px);
+
+      & .contact-methods {
+        flex-direction: column;
+      }
+    }
+  }
+}
+
+@media (width <= 1180px) {
+  header {
+    gap: 0;
+    height: 110px;
+    justify-content: space-between;
+    padding: 0 80px;
+
+    & nav {
+      & a {
+        display: none;
+
+        &:last-child {
+          display: inline;
+        }
+      }
+    }
+  }
+
+  .hero-section {
+    height: calc(100vh - 110px);
+    padding: 0 160px;
+
+    & .main-header {
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      & h1 {
+        text-align: center;
+        margin-bottom: 22px;
+      }
+    }
+
+    & .carousel {
+      bottom: 113px;
+    }
+  }
+}
+
+@media (width <= 937px) {
+  .our-services {
+    & .cards {
+      grid-template-columns: 1fr;
+
+      & h2,
+      h3 {
+        grid-column: 1;
+      }
+    }
+  }
+
+  .about-us {
+    & .company-cases {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  .clients-section {
+    & .clients {
+      & .clients-list {
+        grid-template-columns: 1fr;
+      }
+    }
+  }
+}
+
+@media (width <= 690px) {
+  .hero-section {
+    & .main-header {
+      width: calc(100% - 160px);
     }
   }
 }
